[package]
name = "cardano_epoch"
version = "1.0.0"
license = "GPL-3.0-or-later"
description = "Calculate Cardano epoch number for a date, and format the date of an epoch"
repository = "https://github.com/CodiePP/rsTime4Block/"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
chrono = "0.4"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"